# dialog-integrations

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  settings.py
.github/workflows/: ci.yml  integrate.yml
api/: spec.json
integrations/: base_data_source_integration.py  base_integration.py  shared.py
integrations/co_angers/: integration.py
integrations/co_angers/travaux_voirie/: data_source_integration.py  schema.py
integrations/co_brest/: __init__.py  integration.py  schema.py
integrations/co_brest/permanent_lineaire/: data_source_integration.py  schema.py
integrations/co_dijon/: __init__.py  integration.py
integrations/co_dijon/chantiers_routiers/: data_source_integration.py  schema.py
integrations/co_issy-les-moulineaux/: integration.py
integrations/co_issy-les-moulineaux/travaux_voirie/: data_source_integration.py  (+1 more)
integrations/co_nantes/: integration.py
integrations/co_paris/: __init__.py  integration.py
integrations/co_rennes/: integration.py
integrations/dp_aveyron/: __init__.py  integration.py
integrations/dp_sarthe/: __init__.py  integration.py
integrations/dp_sarthes/: __init__.py  integration.py  schema.py
notifications/: notifier.py
tests/: __init__.py  test_brest_preprocessing.py  test_integration.py  test_sarthes_preprocessing.py
tests/co_brest/: test_permanent_lineaire.py
tests/dp_sarthe/: restrictions_gabarits.csv  test_limitations_vitesse.py  test_restriction_gabarits.py
tests/dp_sarthes/: limitations_vitesse.csv  restrictions_gabarits.csv  test_limitations_vitesse.py  test_restriction_gabarits.py
(+26 files in other folders)
