[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialog-integrations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "numpy!=2.4.0",
    "openapi>=2.0.0",
    "openapi-python-client>=0.28.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
    "shapely>=2.1.2",
    "tabulate>=0.9.0",
    "typer>=0.20.1",
]

[project.scripts]
dialog = "cli:app"

[tool.setuptools]
py-modules = ["cli", "settings"]
